# recommender

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/: codecov.yaml
.github/workflows/: ci.yaml  codecov.yaml
examples/: movielens.py
recommender/: run_neighborhood.py  topk.py  train.py  train_csr.py
recommender/data/: data.py  get_movielens.py  prepare.py  preprocess_base.py  train_test_split.py
recommender/data_loader/: bce_uniform_negative_sampling_dataset.py  data.py  triplet_uniform_negative_sampling_dataset.py  uniform_negative_sampling_dataset.py
recommender/datasets/: _download.py  movielens.py  sample_data.py
recommender/libs/: evaluation.py  parse_args.py  utils.py
recommender/load_data/: load_data_base.py  load_data_movielens.py  load_data_movielens_10m.py  movielens_10m.py  movielens_1m.py  pinterest.py
recommender/loss/: criterion.py  custom.py
recommender/mf/: als.py  matrix_factorization_base.py
recommender/model/: bpr.py  fit_model_base.py  recommender_base.py  torch_model_base.py
recommender/prepare_model_data/: csr.py  prepare_model_data_base.py  prepare_model_data_csr.py  prepare_model_data_torch.py  torch.py
recommender/preprocess/: base.py  movielens_10m.py  movielens_1m.py  pinterest.py  preprocess_base.py  preprocess_base_.py  preprocess_movielens.py  train_test_split.py
recommender/tools/: csr.py  evaluation.py  logger.py  parse_args.py  topk.py  utils.py
tests/: als_test.py  conftest.py  csr_test.py  test_als.py  test_csr.py  test_evaluation_metric.py  test_topk.py  test_train.py  test_train_csr.py  test_train_test_split.py  topk_test.py
(+67 files in other folders)
