[tool.poetry]
name = "recommender"
version = "0.1.0"
description = ""
authors = ["bohyun-shin <shinbo0613@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "1.6.0"
torch = "2.5.1"
numpy = "2.1.3"
pandas = "2.2.3"
tqdm = ">=4.65.0,<4.66.0"
implicit = ">=0.7.2,<0.8.0"
pytest = "8.3.3"
pytest-cov = "6.0.0"
requests = "^2.32.3"
matplotlib = "3.9.2"
seaborn = ">=0.13.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pylint = "^3.0.3"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
# Exclude some directories
exclude = '''
(
  /(
      \.git
    | \.venv
    | migrations
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pylint.messages_control]
disable = [
    "C0103",  # invalid-name
    "C0112",  # empty-docstring
    "C0116",  # missing-function-docstring - for trivial properties/methods
    "C0114",  # missing-module-docstring
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
